--- a/MusicStore/App.xaml
+++ b/MusicStore/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:MusicStore"
              StartupUri="App.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Style/Startowy.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
