--- a/MusicStore/Style/Lightmode.xaml
+++ b/MusicStore/Style/Lightmode.xaml
@@ -14,4 +14,22 @@
 
     <SolidColorBrush x:Key="napisy" Color="MediumVioletRed"/>
     <SolidColorBrush x:Key="paski" Color="MediumPurple"/>
+
+    <Style x:Key="button1" TargetType="Button">
+        <Setter Property="Background" Value="MediumPurple"/>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="purple"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="button2" TargetType="Button">
+        <Setter Property="Background" Value="blue"/>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="LightBlue"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
 </ResourceDictionary>
