--- a/MusicStore/Style/Lightmode.xaml
+++ b/MusicStore/Style/Lightmode.xaml
@@ -32,4 +32,6 @@
             </Trigger>
         </Style.Triggers>
     </Style>
+
+    <BitmapImage x:Key="logo" UriSource="/obrazy/light.png"/>
 </ResourceDictionary>
